# faststream-study

./: Dockerfile  README.md  basic_usage.py  compose.yaml  pyproject.toml  work_with_kafka_container.md
