[tool.poetry]
name = "faststream-study"
version = "0.1.0"
description = ""
authors = ["Alpensin <lotrus@yandex.ru>"]
readme = "README.md"
packages = [{include = "faststream_study"}]

[tool.poetry.dependencies]
python = "^3.10"
faststream = {extras = ["kafka"], version = "^0.3.11"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
